crates/compiler/src/tests/e2e/good/0585_synthetic_option_variant_name_collision/main.gom
struct Option__int32_Some {
    value: int32,
}

struct Option__int32_None {
    value: int32,
}

fn main() -> unit {
    let map: HashMap[int32, int32] = hashmap_new();
    hashmap_set(map, 1i32, 2i32);
    println(Option__int32_Some { value: 3i32 }.value);
}
