crates/compiler/src/tests/e2e/bad/0570_recursive_struct_via_generic_wrapper_in_tuple/main.gom
struct Wrap[T] {
    value: T,
}

struct Loop {
    pair: (int32, Wrap[Loop]),
}

fn main() -> unit {
    ()
}
